# LinuxApplicationDevelopment2023

./: README.md
01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile
03_Text/: randomize.sh
04_Debugging/: Makefile  gdb_1_correct  gdb_2_correct  range.c  run_gdb_1  run_gdb_2
05_Regexps/: Makefile  esub.c
06_TracingFencing/: Makefile  move.c  noremove.c
07_Environmental/: Makefile.am  configure.ac
07_Environmental/src/: rhasher.c
08_I18n/: Makefile.am  configure.ac
08_I18n/po/: POTFILES.in  ru.po
08_I18n/src/: Makefile.am  program.c
09_PatchDiff/: Makefile  maze.c  patch_1  patch_2  patch_3
10_Testing/: Makefile.am  configure.ac
10_Testing/src/: Makefile.am  buf.h  libbuf.c
10_Testing/tests/: Makefile.am  buf_clear_test.c  buf_grow_test.c  buf_pop_test.c  buf_push_test.c  test.h
11_Documenting/: Doxyfile.in  Makefile.am  configure.ac
11_Documenting/src/: program.c
